// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`engine, notes/ basics bad parse  1`] = `"{\\"status\\":\\"bad_parse_for_note\\",\\"msg\\":\\"{\\\\\\"fname\\\\\\":\\\\\\"foo.md\\\\\\",\\\\\\"error\\\\\\":\\\\\\"can not read a block mapping entry; a multiline key may not be an implicit key at line 5, column 1:\\\\\\\\n    \\\\\\\\n    ^\\\\\\"}\\",\\"payload\\":\\"{\\\\\\"message\\\\\\":\\\\\\"{\\\\\\\\\\\\\\"fname\\\\\\\\\\\\\\":\\\\\\\\\\\\\\"foo.md\\\\\\\\\\\\\\",\\\\\\\\\\\\\\"error\\\\\\\\\\\\\\":\\\\\\\\\\\\\\"can not read a block mapping entry; a multiline key may not be an implicit key at line 5, column 1:\\\\\\\\\\\\\\\\n    \\\\\\\\\\\\\\\\n    ^\\\\\\\\\\\\\\"}\\\\\\",\\\\\\"stack\\\\\\":\\\\\\"Error: {\\\\\\\\\\\\\\"fname\\\\\\\\\\\\\\":\\\\\\\\\\\\\\"foo.md\\\\\\\\\\\\\\",\\\\\\\\\\\\\\"error\\\\\\\\\\\\\\":\\\\\\\\\\\\\\"can not read a block mapping entry; a multiline key may not be an implicit key at line 5, column 1:\\\\\\\\\\\\\\\\n    \\\\\\\\\\\\\\\\n    ^\\\\\\\\\\\\\\"}\\\\\\\\n    at NoteParserV2.parseNoteProps (/Users/kevinlin/projects/dendronv2/dendron/packages/engine-server/src/drivers/file/storev2.ts:190:13)\\\\\\\\n    at /Users/kevinlin/projects/dendronv2/dendron/packages/engine-server/src/drivers/file/storev2.ts:110:28\\\\\\\\n    at Array.flatMap (<anonymous>)\\\\\\\\n    at NoteParserV2.parseFile (/Users/kevinlin/projects/dendronv2/dendron/packages/engine-server/src/drivers/file/storev2.ts:109:8)\\\\\\\\n    at NoteParserV2.parse (/Users/kevinlin/projects/dendronv2/dendron/packages/engine-server/src/drivers/file/storev2.ts:207:17)\\\\\\\\n    at FileStorageV2.initNotes (/Users/kevinlin/projects/dendronv2/dendron/packages/engine-server/src/drivers/file/storev2.ts:378:87)\\\\\\\\n    at FileStorageV2.init (/Users/kevinlin/projects/dendronv2/dendron/packages/engine-server/src/drivers/file/storev2.ts:271:33)\\\\\\\\n    at DendronEngineV2.init (/Users/kevinlin/projects/dendronv2/dendron/packages/engine-server/src/enginev2.ts:69:34)\\\\\\\\n    at Object.<anonymous> (/Users/kevinlin/projects/dendronv2/dendron/packages/engine-server/src/__tests__/enginev2.spec.ts:810:26)\\\\\\"}\\"}"`;

exports[`engine, notes/ basics root 1`] = `
Object {
  "root": Object {
    "body": "
",
    "children": Array [],
    "created": "1",
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "root",
    "id": "root",
    "links": Array [],
    "parent": null,
    "title": "Root",
    "type": "note",
    "updated": "1",
  },
}
`;

exports[`engine, notes/ basics root and two notes 1`] = `
Object {
  "foo": Object {
    "body": "
",
    "children": Array [
      "foo.ch1",
    ],
    "created": "1",
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo",
    "id": "foo",
    "links": Array [],
    "parent": "root",
    "title": "Foo",
    "type": "note",
    "updated": "1",
  },
  "foo.ch1": Object {
    "body": "
",
    "children": Array [],
    "created": "1",
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo.ch1",
    "id": "foo.ch1",
    "links": Array [],
    "parent": "foo",
    "title": "Ch1",
    "type": "note",
    "updated": "1",
  },
  "root": Object {
    "body": "
",
    "children": Array [
      "foo",
    ],
    "created": "1",
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "root",
    "id": "root",
    "links": Array [],
    "parent": null,
    "title": "Root",
    "type": "note",
    "updated": "1",
  },
}
`;

exports[`engine, notes/ basics stub note 1`] = `
Array [
  "foo.ch1.md",
  "root.md",
  "root.schema.yml",
]
`;

exports[`engine, notes/ query/ * 1`] = `
Array [
  Object {
    "body": "
",
    "children": Array [
      "foo",
    ],
    "created": "1",
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "root",
    "id": "root",
    "links": Array [],
    "parent": null,
    "title": "Root",
    "type": "note",
    "updated": "1",
  },
  Object {
    "body": "
",
    "children": Array [
      "foo.ch1",
    ],
    "created": "1",
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo",
    "id": "foo",
    "links": Array [],
    "parent": "root",
    "schema": Object {
      "moduleId": "foo",
      "schemaId": "foo",
    },
    "title": "Foo",
    "type": "note",
    "updated": "1",
  },
  Object {
    "body": "
",
    "children": Array [],
    "created": "1",
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo.ch1",
    "id": "foo.ch1",
    "links": Array [],
    "parent": "foo",
    "schema": Object {
      "moduleId": "foo",
      "schemaId": "ch1",
    },
    "title": "Ch1",
    "type": "note",
    "updated": "1",
  },
]
`;

exports[`engine, notes/ query/ empty string 1`] = `
Array [
  Object {
    "body": "
",
    "children": Array [
      "foo",
    ],
    "created": "1",
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "root",
    "id": "root",
    "links": Array [],
    "parent": null,
    "title": "Root",
    "type": "note",
    "updated": "1",
  },
]
`;

exports[`engine, notes/ query/ foo 1`] = `
Array [
  Object {
    "body": "
",
    "children": Array [
      "foo.ch1",
    ],
    "created": "1",
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo",
    "id": "foo",
    "links": Array [],
    "parent": "root",
    "schema": Object {
      "moduleId": "foo",
      "schemaId": "foo",
    },
    "title": "Foo",
    "type": "note",
    "updated": "1",
  },
  Object {
    "body": "
",
    "children": Array [],
    "created": "1",
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo.ch1",
    "id": "foo.ch1",
    "links": Array [],
    "parent": "foo",
    "schema": Object {
      "moduleId": "foo",
      "schemaId": "ch1",
    },
    "title": "Ch1",
    "type": "note",
    "updated": "1",
  },
  Object {
    "body": "
",
    "children": Array [
      "foo",
    ],
    "created": "1",
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "root",
    "id": "root",
    "links": Array [],
    "parent": null,
    "title": "Root",
    "type": "note",
    "updated": "1",
  },
]
`;

exports[`engine, notes/ rename/ basic 1`] = `
Object {
  "data": Array [
    Object {
      "note": Object {
        "body": "[[baz]]
",
        "children": Array [],
        "created": "1",
        "custom": Object {},
        "data": Object {},
        "desc": "",
        "fname": "bar",
        "id": "bar",
        "links": Array [
          Object {
            "alias": undefined,
            "from": Object {
              "fname": "bar",
              "id": "bar",
            },
            "original": "[[baz]]",
            "pos": Object {
              "end": 7,
              "start": 0,
            },
            "to": Object {
              "fname": "baz",
            },
            "type": "wiki",
            "value": "baz",
          },
        ],
        "parent": "root",
        "title": "Bar",
        "type": "note",
        "updated": "1",
      },
      "status": "update",
    },
  ],
  "error": null,
}
`;

exports[`engine, notes/ rename/ basic 2`] = `
Array [
  "bar.md",
  "baz.md",
  "foo.ch1.md",
  "foo.schema.yml",
  "root.md",
  "root.schema.yml",
]
`;

exports[`engine, notes/ write/ write note, match schema: notes 1`] = `
Object {
  "foo": Object {
    "body": "
",
    "children": Array [
      "foo.ch1",
    ],
    "created": "1",
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo",
    "id": "foo",
    "links": Array [],
    "parent": "root",
    "schema": Object {
      "moduleId": "foo",
      "schemaId": "foo",
    },
    "title": "Foo",
    "type": "note",
    "updated": "1",
  },
  "foo.ch1": Object {
    "body": "",
    "children": Array [],
    "created": "1",
    "data": Object {},
    "desc": "",
    "fname": "foo.ch1",
    "id": "foo.ch1",
    "links": Array [],
    "parent": "foo",
    "schema": Object {
      "moduleId": "foo",
      "schemaId": "ch1",
    },
    "title": "Ch1",
    "type": "note",
    "updated": "1",
  },
  "root": Object {
    "body": "
",
    "children": Array [
      "foo",
    ],
    "created": "1",
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "root",
    "id": "root",
    "links": Array [],
    "parent": null,
    "title": "Root",
    "type": "note",
    "updated": "1",
  },
}
`;

exports[`engine, notes/ write/ write note, no schema 1`] = `
Object {
  "bar": Object {
    "body": "",
    "children": Array [],
    "created": "1",
    "data": Object {},
    "desc": "",
    "fname": "bar",
    "id": "bar",
    "links": Array [],
    "parent": "root",
    "title": "Bar",
    "type": "note",
    "updated": "1",
  },
  "foo": Object {
    "body": "
",
    "children": Array [
      "foo.ch1",
    ],
    "created": "1",
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo",
    "id": "foo",
    "links": Array [],
    "parent": "root",
    "schema": Object {
      "moduleId": "foo",
      "schemaId": "foo",
    },
    "title": "Foo",
    "type": "note",
    "updated": "1",
  },
  "foo.ch1": Object {
    "body": "
",
    "children": Array [],
    "created": "1",
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo.ch1",
    "id": "foo.ch1",
    "links": Array [],
    "parent": "foo",
    "schema": Object {
      "moduleId": "foo",
      "schemaId": "ch1",
    },
    "title": "Ch1",
    "type": "note",
    "updated": "1",
  },
  "root": Object {
    "body": "
",
    "children": Array [
      "foo",
      "bar",
    ],
    "created": "1",
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "root",
    "id": "root",
    "links": Array [],
    "parent": null,
    "title": "Root",
    "type": "note",
    "updated": "1",
  },
}
`;

exports[`engine, schema/ basics/ root 1`] = `
"version: 1
imports: []
schemas:
  - id: root
    children: []
    title: root
    parent: root
"
`;

exports[`engine, schema/ delete/ delete non-root 1`] = `
Array [
  "foo.ch1.md",
  "foo.md",
  "root.md",
  "root.schema.yml",
]
`;

exports[`engine, schema/ delete/ delete non-root 2`] = `
Object {
  "data": Array [
    Object {
      "body": "
",
      "children": Array [
        "foo.ch1",
      ],
      "created": "1",
      "custom": Object {},
      "data": Object {},
      "desc": "",
      "fname": "foo",
      "id": "foo",
      "links": Array [],
      "parent": "root",
      "title": "Foo",
      "type": "note",
      "updated": "1",
    },
    Object {
      "body": "
",
      "children": Array [],
      "created": "1",
      "custom": Object {},
      "data": Object {},
      "desc": "",
      "fname": "foo.ch1",
      "id": "foo.ch1",
      "links": Array [],
      "parent": "foo",
      "title": "Ch1",
      "type": "note",
      "updated": "1",
    },
    Object {
      "body": "
",
      "children": Array [
        "foo",
      ],
      "created": "1",
      "custom": Object {},
      "data": Object {},
      "desc": "",
      "fname": "root",
      "id": "root",
      "links": Array [],
      "parent": null,
      "title": "Root",
      "type": "note",
      "updated": "1",
    },
  ],
  "error": null,
}
`;

exports[`engine, schema/ write/ update schema, add new prop to module: new schema file 1`] = `
Object {
  "imports": Array [],
  "schemas": Array [
    Object {
      "children": Array [
        "ch1",
        "ch2",
      ],
      "id": "foo",
      "parent": "root",
      "title": "foo",
    },
    Object {
      "children": Array [],
      "id": "ch1",
      "title": "ch1",
    },
    Object {
      "children": Array [],
      "id": "ch2",
      "title": "ch2",
    },
  ],
  "version": 1,
}
`;

exports[`note and schema basics/ root and two notes 1`] = `
Object {
  "foo": Object {
    "body": "
",
    "children": Array [
      "foo.ch1",
    ],
    "created": "1",
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo",
    "id": "foo",
    "links": Array [],
    "parent": "root",
    "schema": Object {
      "moduleId": "foo",
      "schemaId": "foo",
    },
    "title": "Foo",
    "type": "note",
    "updated": "1",
  },
  "foo.ch1": Object {
    "body": "
",
    "children": Array [],
    "created": "1",
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo.ch1",
    "id": "foo.ch1",
    "links": Array [],
    "parent": "foo",
    "schema": Object {
      "moduleId": "foo",
      "schemaId": "ch1",
    },
    "title": "Ch1",
    "type": "note",
    "updated": "1",
  },
  "root": Object {
    "body": "
",
    "children": Array [
      "foo",
    ],
    "created": "1",
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "root",
    "id": "root",
    "links": Array [],
    "parent": null,
    "title": "Root",
    "type": "note",
    "updated": "1",
  },
}
`;
